--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
 
 	  <!-- Custom scripts for this template -->
 	  <script src="assets/js/agency.min.js"></script>
+	  
+	  <!-- Neural Network Animation Script -->
+	  <script src="assets/js/neural-network.js"></script>
 
   </body>
 </html>
