--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -48,14 +48,15 @@
   <!-- Header -->
   {% if site.locale and site.locale != "" and site.locale != nil %}
   <header class="masthead">
+    <div class="neural-network-container">
+      <div class="neural-network"></div>
+      <div class="welcome-overlay">
+        <h1 class="welcome-text">Firnaz Ahamed</h1>
+        <p class="welcome-subtitle">Welcome to my portfolio!</p>
+      </div>
+    </div>
     <div class="container">
       <div class="intro-text">
-	  {%- if site.data.sitetext[site.locale].header.title -%}
-        <div class="intro-lead-in">{{ site.data.sitetext[site.locale].header.title | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext[site.locale].header.text -%}
-        <div class="intro-heading text-uppercase">{{ site.data.sitetext[site.locale].header.text | markdownify }}</div>
-	  {%- endif -%}
 	  {%- if site.data.sitetext[site.locale].header.button -%}
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{{ site.data.sitetext[site.locale].header.buttonlink }}">{{ site.data.sitetext[site.locale].header.button }}</a>
 	  {%- endif -%}
@@ -64,14 +65,15 @@
   </header>
   {% else %}
   <header class="masthead">
+    <div class="neural-network-container">
+      <div class="neural-network"></div>
+      <div class="welcome-overlay">
+        <h1 class="welcome-text">Firnaz Ahamed</h1>
+        <p class="welcome-subtitle">Welcome to my portfolio!</p>
+      </div>
+    </div>
     <div class="container">
       <div class="intro-text">
-	  {%- if site.data.sitetext.header.title -%}
-        <div class="intro-lead-in">{{ site.data.sitetext.header.title | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext.header.text -%}
-        <div class="intro-heading text-uppercase">{{ site.data.sitetext.header.text | markdownify }}</div>
-	  {%- endif -%}
 	  {%- if site.data.sitetext.header.button -%}
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{{ site.data.sitetext.header.buttonlink }}">{{ site.data.sitetext.header.button }}</a>
 	  {%- endif -%}
