--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,3 +6,4 @@ layout: default
 {% include portfolio_grid.html %}
 {% include about.html %}
 {% include timeline.html %}
+{% include certifications.html %}
