--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -7,9 +7,16 @@ header.masthead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  position: relative;
+  height: 100vh;
+  min-height: 600px;
   .intro-text {
-    padding-top: 105px;
-    padding-bottom: 70px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 0;
+    padding-bottom: 0;
     .intro-lead-in {
       font-size: 24px;
       font-style: normal;
@@ -36,8 +43,7 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead {
     .intro-text {
-      padding-top: 210px;
-      padding-bottom: 140px;
+      bottom: 80px;
       .intro-lead-in {
         font-size: 42px;
         font-style: normal;
