--- a/_sass/layout/_timeline.scss
+++ b/_sass/layout/_timeline.scss
@@ -70,6 +70,14 @@
         font-size: 10px;
         line-height: 14px;
         margin-top: 12px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        margin: 0;
+        padding: 10px;
+        line-height: 1.2;
       }
     }
     &.timeline-inverted > .timeline-panel {
@@ -142,6 +150,14 @@
           font-size: 13px;
           line-height: 18px;
           margin-top: 16px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          margin: 0;
+          padding: 15px;
+          line-height: 1.2;
         }
       }
       &.timeline-inverted > .timeline-panel {
@@ -177,6 +193,14 @@
           font-size: 18px;
           line-height: 26px;
           margin-top: 30px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          margin: 0;
+          padding: 20px;
+          line-height: 1.2;
         }
       }
       &.timeline-inverted > .timeline-panel {
@@ -208,6 +232,14 @@
         }
         h4 {
           margin-top: 40px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          margin: 0;
+          padding: 25px;
+          line-height: 1.2;
         }
       }
       &.timeline-inverted > .timeline-panel {
